--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.myapplication.MainActivity">
 
 
-
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/main_linear">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_above="@+id/main_linear"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_linear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:id="@+id/main_linear"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
 
     </LinearLayout>
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="129dp"
-        android:layout_height="77dp"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:onClick="Entersearch"
         android:text="@string/skip"
-        android:textSize="30dp"
-        android:onClick="Entersearch"/>
-</RelativeLayout>
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="394dp" />
+</android.support.constraint.ConstraintLayout>
