--- a/MyApplication/app/src/main/res/layout/activity_main3.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main3.xml
@@ -56,7 +56,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Freq"
+        android:text="min"
         app:layout_constraintBottom_toTopOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
@@ -71,7 +71,7 @@
         android:layout_marginBottom="208dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="hour"
         app:layout_constraintBottom_toTopOf="@+id/imageButton2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
